<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SetReminder">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="315dp"
                    android:layout_height="91dp"
                    android:layout_weight="1"
                    android:src="@drawable/cupcake" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:text="@string/set_reminder_heading"
                    android:textAlignment="center"
                    android:textAppearance="@style/HeadingFontStyle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/set_reminder_important"
                    android:textAlignment="center"
                    android:textAppearance="@style/SubHeadingFontStyle" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/set_reminder_note"
                    android:textAlignment="center"
                    android:textAppearance="@style/MainFontStyle" />

                <TextView
                    android:id="@+id/linkHelp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/set_reminder_link"
                    android:textAlignment="center"
                    android:textAppearance="@style/LinkFontStyle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextBirthdayHaver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/set_reminder_name"
                    android:inputType="textPersonName"
                    android:textAppearance="@style/MainFontStyle" />

                <Button
                    android:id="@+id/btnChooseDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/mid_pink"
                    android:text="@string/set_reminder_choose_date"
                    android:textAppearance="@style/ButtonFontStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="@string/set_reminder_extra_reminders"
                    android:textAppearance="@style/HeadingFontStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerCardNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/spinner_reminder"
                    android:entries="@array/reminder_number"
                    android:theme="@style/spinnerItemSetNumber" />

                <Spinner
                    android:id="@+id/spinnerCardUnits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/spinner_reminder"
                    android:entries="@array/reminder_unit"
                    android:theme="@style/spinnerItemSetUnits" />

                <Button
                    android:id="@+id/btnCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_reminder_card"
                    android:textAppearance="@style/ButtonFontStyle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerGiftNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/spinner_reminder"
                    android:entries="@array/reminder_number"
                    android:theme="@style/spinnerItemSetNumber" />

                <Spinner
                    android:id="@+id/spinnerGiftUnits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/spinner_reminder"
                    android:entries="@array/reminder_unit"
                    android:theme="@style/spinnerItemSetUnits" />

                <Button
                    android:id="@+id/btnGift"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_reminder_gift"
                    android:textAppearance="@style/ButtonFontStyle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerCakeNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/spinner_reminder"
                    android:entries="@array/reminder_number"
                    android:theme="@style/spinnerItemSetNumber" />

                <Spinner
                    android:id="@+id/spinnerCakeUnits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/spinner_reminder"
                    android:entries="@array/reminder_unit"
                    android:theme="@style/spinnerItemSetUnits" />

                <Button
                    android:id="@+id/btnCake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_reminder_cake"
                    android:textAppearance="@style/ButtonFontStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/set_other_reminder"
                    android:inputType="textPersonName"
                    android:textAppearance="@style/MainFontStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="40dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerOtherNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/spinner_reminder"
                    android:entries="@array/reminder_number"
                    android:theme="@style/spinnerItemSetNumber" />

                <Spinner
                    android:id="@+id/spinnerOtherUnits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/spinner_reminder"
                    android:entries="@array/reminder_unit"
                    android:theme="@style/spinnerItemSetUnits" />

                <Button
                    android:id="@+id/btnSetOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_reminder"
                    android:textAppearance="@style/ButtonFontStyle" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>